feat: include/exclude terms
